--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <head>
+        <meta charset="UT-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+        <link href="stylesheet.css" rel="stylesheet">
+        <title>Frontend Mentor | Stats preview card component</title>
+        <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet"> 
+    </head>
+    <body>
+        <div class="grid">
+            <div class="text_block">
+                <div class="text_container">
+                    <h1>
+                        Get <span>insights</span> that help your business grow.
+                    </h1>
+                    <p>
+                        Discover the benefits of date analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
+                    </p>
+                    <ul>
+                        <li>
+                            <p class="white_p">10k+</p>
+                            <p>Companies</p>
+                        </li>
+                        <li>
+                            <p class="white_p">314</p>
+                            <p>Templates</p>
+                        </li>
+                        <li>
+                            <p class="white_p">12M+</p>
+                            <p>Queries</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="img_block"></div>
+        </div>
+    </body>
 </html>
