--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         Get <span>insights</span> that help your business grow.
                     </h1>
                     <p>
-                        Discover the benefits of date analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
+                        Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
                     </p>
                     <ul>
                         <li>
